--- a/templates/registration.html
+++ b/templates/registration.html
@@ -22,7 +22,7 @@
               <input type="email" class="form-control" placeholder="Email" name="email" required>
             </div>
             <div class="col">
-              <input type="phone" class="form-control" placeholder="Phone" name="phone" required>
+              <input type="tel" class="form-control" placeholder="Phone" name="phone" pattern="[0-9]{10}" required>
             </div>
         </div>
         <div class="row" style="padding-bottom: 0;">
