--- a/templates/camp.html
+++ b/templates/camp.html
@@ -22,14 +22,14 @@
 	<center>
 	<div>
 	  	<form action="{% url 'camp' %}" method="POST">
-	  		<h3>Fill Form For Blood Camp</h3>
+	  		<h3 style="color: darkred;">Fill Form For Blood Camp</h3>
 	  		 {% csrf_token %} 
-	  		 <input class="form-control" type="text" placeholder="Title" name="title"><br>
-	  		 <input class="form-control" type="text" placeholder="Location" name="location"><br>
-	  		 <input class="form-control" type="text" placeholder="Organizer" name="organizer"><br>
-	  		 <input class="form-control" type="number" placeholder="Contact" name="contact_no"><br>
-	  		 <input class="form-control" type="date" placeholder="Date" name="date"><br>
-	  		<button type="submit" class="btn btn-primary" >Submit</button>
+	  		 <input class="form-control" type="text" placeholder="Title" name="title" required=""><br>
+	  		 <input class="form-control" type="text" placeholder="Location" name="location" required=""><br>
+	  		 <input class="form-control" type="text" placeholder="Organizer" name="organizer"required><br>
+	  		 <input class="form-control" id="phone" type="tel" placeholder="Contact" name="contact_no" pattern="[0-9]{10}" required=""><br>
+	  		 <input class="form-control" type="date" placeholder="Date" name="date" required><br>
+	  		<button type="submit" class="btn btn-primary">Submit</button>
 	  	</form>
 	</div>
 	</center>
