--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,9 @@
                       {% if user.is_authenticated %}
                         <a class="dropdown-item" href="#">Blood Request</a>
                         {% endif %}
+                        {% if user.is_staff %}
                         <a class="dropdown-item" href="{% url 'adminpanel' %}">Admin Panel</a>
+                        {% endif %}
                         <a class="dropdown-item" href="{% url 'availibility' %}">Blood Availability</a>
                     </div>
                 </li>
