--- a/templates/userProfile.html
+++ b/templates/userProfile.html
@@ -2,33 +2,30 @@
 {% block title %}Admin Panel{% endblock %}
 {% block content %}
 <div class="admin-panel">
-	<form method="POST">
+	<form  action="" method="POST" enctype="multipart/fprm-data">
+		 {% csrf_token %} 
 	<div class="row">
 		{{users.management_form}}
 		{% for u in users %}
+		{{u.id}}
 		<div class="col" style="margin: 10px; background-color: tomato; border-radius: 5px; text-align: center; padding: 10px; color: white;">
-			<tbody>
-			<tr>	
-				<td>Username :</td>
-				<td>{{u.username}}</td>
-			</tr>
-			<tr>
-				<td>Firstname :</td>
-				<td>{{u.first_name}}</td>
-			</tr>
-			<tr>
-				<td>Lastname :</td>
-				<td>{{u.last_name}}</td>
-			</tr>
-			<tr>
-				<td>Email :</td>
-				<td>{{u.email}}</td>
-			</tr>
-			<tr>
-				<td>Staff :</td>
-				<td>{{u.is_staff}}</td>
-			</tr>
-			</tbody>
+			<div class="row">
+				<div class="col">
+					<b>Username</b> : {{u.username}}
+				</div>
+				<div class="col">
+					<b>First Name</b> : {{u.first_name}}
+				</div>
+				<div class="col">
+					<b>Last Name</b> : {{u.last_name}}
+				</div>
+				<div class="col">
+					<b>Email</b> : {{u.email}}
+				</div>
+				<div class="col">
+					<b>Staff</b> :<br> {{u.is_staff}}
+				</div>
+			</div>
 		</div>
 		{% endfor %}
 	</div>
@@ -36,36 +33,29 @@
 		<div class="col" style="margin: 10px; background-color: tomato; border-radius: 5px; text-align: left; padding: 10px; color: white;">
 			{{profile.management_form}}
 			{% for p in profile %}
-			<div class="row">
+			{{p.id}}
+		  <div class="row">
 			<div class="col">
-				<td>Phone :</td>
-				<td>{{p.phone}}</td>
-			</div>
-			<div class="col">
-				<td>Gender :</td>
-				<td>{{p.gender}}</td>
+				Phone : {{p.phone}}
 			</div>
 			<div class="col">
-				<td>D.O.B :</td>
-				<td>{{p.dob}}</td>
-			</div>
-			</div>
-			<div class="row" style="margin-top: 10px;">
-			<div class="col">
-				<td>Perment Add :</td>
-				<td>{{p.per_add}}</td>
+				Gender : {{p.gender}}
 			</div>
 			<div class="col">
-				<td>Temporary Add :</td>
-				<td>{{p.temp_add}}</td>
+				D.O.B : {{p.dob}}
 			</div>
+		  </div>
+		  <div class="row" style="margin: 20px">
+			<div class="col-8">
+				Perment Address : {{p.per_add}}
 			</div>
-			<div class="row" style="margin-top: 10px;">
-			<div class="col">
-				<td>Profile Picture :</td>
-				<td>{{p.profile_pic}}</td>
+			<div class="col" style="margin-top: 20px">
+				Profile Picture : {{p.profile_pic}}
 			</div>
-			</div>
+			<div class="col-8">
+				Temporary Address : {{p.temp_add}}
+			</div>	
+		  </div>
 			{% endfor %}
 		</div>
 	</div>
@@ -77,7 +67,9 @@
 			</div>
 			{% endfor %}
 	</div>
-	<center><button class="btn btn-primary" type="submit" style="margin-bottom: 10px">Submit</button></center>
+	<center><button class="btn btn-primary" type="submit" style="margin-bottom: 10px">Submit</button>
+		<a href="{% url 'adminpanel' %}" class="btn btn-secondary" style="margin-bottom: 10px;">Back</a>
+	</center>
 	</form>
 </div>
 {% endblock %}
