--- a/templates/index.html
+++ b/templates/index.html
@@ -55,7 +55,7 @@
                       <a class="dropdown-item" href="{% url 'camp' %}">Camp Schedule</a>
                       <div class="dropdown-divider"></div>
                       {% if user.is_authenticated %}
-                        <a class="dropdown-item" href="#">Blood Request</a>
+                        <a class="dropdown-item" href="{% url 'bloodrequest' %}">Blood Request</a>
                         {% endif %}
                         {% if user.is_staff %}
                         <a class="dropdown-item" href="{% url 'adminpanel' %}">Admin Panel</a>
