--- a/templates/profile.html
+++ b/templates/profile.html
@@ -16,9 +16,9 @@
                 <div class="col-9">
                     <div class="row">
                         <div class="col-sm-3">First Name :</div>
-                        <div class="col-sm-3">{{user.first_name}}</div>
+                        <div class="col-sm-3">{{user.first_name.title}}</div>
                         <div class="col-sm-3">Last Name :</div>
-                        <div class="col-sm-3">{{user.last_name}}</div>
+                        <div class="col-sm-3">{{user.last_name.title}}</div>
                     </div>
                     <div class="row">
                         <div class="col-sm-3">Email ID :</div>
@@ -57,8 +57,8 @@
                     </div>
                     {% for member in members %}
                     <div class="body row">
-                        <div class="col-lg-4">{{member.full_name}}</div>
-                        <div class="col-2">{{member.relation}}</div>
+                        <div class="col-lg-4">{{member.full_name.title}}</div>
+                        <div class="col-2">{{member.relation.title}}</div>
                         <div class="col">{{member.member_gender}}</div>
                         <div class="col">{{member.age}}</div>
                         <div class="col">{{member.birthdate}}</div>
