--- a/templates/registration.html
+++ b/templates/registration.html
@@ -11,10 +11,10 @@
         </div>
         <div class="row">
           <div class="col">
-            <input type="text" class="form-control" placeholder="First name" name="first_name" required>
+            <input type="text" class="form-control"  style="text-transform: capitalize;" placeholder="First name" name="first_name" required>
           </div>
           <div class="col">
-            <input type="text" class="form-control" placeholder="Last name" name="last_name" required>
+            <input type="text" class="form-control"  style="text-transform: capitalize;" placeholder="Last name" name="last_name" required>
           </div>
         </div>
         <div class="row">
@@ -44,7 +44,8 @@
         </div>
         <div class="row">
             <div class="col">
-              <input type="password" class="form-control" placeholder="Password" name="password1" required>
+              <input type="password" class="form-control" placeholder="Password" name="password1"  pattern="[a-zA-Z0-9]{8,}" required>
+              <small>*Contain minimum 8 alpanumric characters</small>
             </div>
             <div class="col">
               <input type="password" class="form-control" placeholder="Confirm Password" name="password" required>
